deployments/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kubejobs
  labels:
    app: redis

spec:
  type: ClusterIP

  selector:
    app: redis

  ports:
    - port: 6379
      targetPort: 6379
