deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: kubejobs
  labels:
    app: api
    component: backend
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
